--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,10 @@
     margin: 0px;
     box-sizing: border-box;
 }
-
+h1,h2,h3,h4,h5,p{
+    margin: 0px;
+    padding: 0px;
+}
 @font-face {
     font-family: Poppins-Regular;
     src: url('../fonts/Poppins-Regular.ttf') format("opentype")
@@ -43,6 +46,22 @@
     font-family: Exodus-Demo-Sharpen;
     src: url('../fonts/Exodus-Demo-Sharpen.otf');
 }
+@font-face {
+    font-family: LEMONMILK-Bold;
+    src: url('../fonts/LEMONMILK-Bold.otf');
+}
+@font-face {
+    font-family: LEMONMILK-Light;
+    src: url('../fonts/LEMONMILK-Light.otf');
+}
+@font-face {
+    font-family: LEMONMILK-Medium;
+    src: url('../fonts/LEMONMILK-Medium.otf');
+}
+@font-face {
+    font-family: LEMONMILK-Regular;
+    src: url('../fonts/LEMONMILK-Regular.otf');
+}
 
 
 html {
@@ -55,7 +74,524 @@ body {
     max-width: 1680px;
     position: relative;
 }
-
+/* ========================================Navbar=================================================== */
+#navbar{
+    position: fixed;
+    width: 100%;
+    position: absolute;
+    top: 40px;
+    z-index: 99999999;
+}
+#navbar .navbar{
+  background-color:rgba(255, 255, 255, 0.911);
+  padding: 0px;
+}
+#navbar .container-fluid{
+  padding: 0px;
+  width:88%;
+  margin: 0px auto;
+}
+#navbar .navbar-expand-lg .navbar-collapse {
+    justify-content: center;
+    padding: 4px 0px;
+}
+#navbar .navbar-expand-lg .navbar-nav{
+    flex-direction: row;
+   align-items: center;
+   gap: 37px;
+}
+#navbar .navbar-expand-lg .navbar-nav .nav-item .nav-link{
+    font-size: 15px;
+    font-family:LEMONMILK-Medium;
+    color:#434749;
+    padding: 0px;
+}
+#navbar .navbar-expand-lg .navbar-nav .nav-item .nav-link:hover{
+    color: #8c412b;
+}
+#navbar .navbar-expand-lg .navbar-nav .nav-item .active{
+    color:#8c412b;
+}
+#navbar .navbar-brand img{
+    width: 100%;
+    height: 100%;
+}
+#navbar .navbar-brand{
+    margin: 0px;
+}
+#navbar .dropdown-toggle::after {
+    display: inline-block;
+    margin-left: 0.255em;
+    vertical-align: 0.255em;
+    content: "";
+    border-top: 0.3em solid;
+    border-right: 0.3em solid transparent;
+    border-bottom: 0;
+    border-left: 0.3em solid transparent;
+    color: #8c412b;
+}
+#navbar .navbar-btn{
+    background-color:#8c412b;
+    display: inline-block;
+    height: 40px;
+    width: 125px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-decoration: none;
+}
+#navbar .navbar-btn span{
+    color: white;
+    font-size: 15px;
+    font-family:LEMONMILK-Medium;
+    text-decoration: none;
+}
+#navbar .navbar-btn:hover>span{
+    color: #8c412b;
+}
+#navbar .navbar-btn:focus>span{
+    color: #8c412b;
+}
+#navbar .navbar-btn-one{
+    display: inline-block;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-decoration: none;
+    gap: 13px;
+    width: 200px;
+}
+#navbar .navbar-btn-two{
+    width: 200px;
+    display: flex;
+    justify-content: end;
+}
+#navbar .navbar-btn-one .two{
+    color:#434749;
+    font-size: 16px;
+    font-family:LEMONMILK-Regular;
+    text-decoration: none;
+}
+#navbar .navbar-btn-one .one{
+    color:white;
+    background-color: #8c412b;
+    height: 44px;
+    width: 44px;
+    border-radius: 200px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+#navbar .dropdown-menu li a{
+    color:#434749;
+    font-family:LEMONMILK-Regular;
+    font-size: 12px;
+    padding: 10px;
+}
+#navbar .dropdown-menu li a:hover{
+    background-color:#8c412b;
+    color: white;
+}#navbar .navbar-brand-one{
+    display: none;
+}
+#navbar .navbar-scroll{
+    position: fixed;
+    top: 0px;
+    width: 100%;
+    max-width:1680px ;
+    margin: auto;
+    background-color: white;
+}
+/* ========================================Navbar=end=============================================== */
+/* ========================================carousel=================================================== */
+#carousel{
+    
+}
+#carousel .carousel-control-prev {
+    display: none;
+}
+#carousel .carousel-control-next {
+    display: none;
+}
+#carousel .carousel-inner .carousel-item p{
+    font-family:LEMONMILK-Bold;
+    font-size: 55px;
+    text-align: left;
+    line-height:60px;
+    margin: 33px 0px;
+}
+#carousel .carousel-btn{
+    background-color:#8c412b;
+    display: inline-block;
+    height: 40px;
+    width: 125px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-decoration: none;
+}
+#carousel .carousel-btn span{
+    color: white;
+    font-size: 15px;
+    font-family:LEMONMILK-Medium;
+    text-decoration: none;
+}
+#carousel .carousel-caption {
+    position: absolute;
+    right:85px;
+    bottom: 145px;
+    left:60%;
+    padding-top:0px;
+    padding-bottom:0px;
+    color: #fff;
+    text-align: start;
+    z-index: 2;
+}
+#carousel .carousel-indicators {
+    position: absolute;
+    right: 0;
+    bottom: 0;
+    left:60%;
+    z-index: 2;
+    display: flex;
+    justify-content: start;
+    padding: 0;
+    margin-right: 0px;
+    margin-bottom: 92px;
+    margin-left: 0px;
+}
+#carousel .carousel-indicators button{
+    width:90px;
+    height:5px;
+    margin: 0px 5px;
+}
+#carousel .carousel-indicators .active{
+    background-color: #8c412b;
+}
+#carousel .overlay{
+    background-color: rgba(0, 0, 0, 0.473);
+    position: absolute;
+    top: 0px;
+    width: 100%;
+    height: 100%;
+}
+/* ========================================carousel=end=============================================== */
+/* ========================================both=================================================== */
+#tab{
+    position: relative;
+}
+#tab .tab-contentt{
+    width: 88%;
+    margin: 0px auto;
+}
+#tab .tab-contentt .tab-boxes{
+    display: flex;
+    width: 100%;
+    margin: -30px auto 0px auto;
+    justify-content: space-between;
+    gap: 40px;
+}
+#tab .tab-contentt .tab-boxes .tab-box{
+    padding:35px 18px;
+    background-color:white;
+    box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+    /* width: 30%; */
+}
+#tab .tab-contentt .tab-boxes .tab-box .tab-box-inner{
+    display: flex;
+    align-items: center;
+    gap: 20px;
+}
+#tab .tab-contentt .tab-boxes .tab-box .tab-box-inner .tab-white{
+    display: none;
+}
+#tab .tab-contentt .tab-boxes .tab-box .tab-box-inner .tab-brown{
+    display: block;
+}
+#tab .tab-contentt .tab-boxes .tab-box .tab-box-inner .inner-content h2{
+    font-size: 20px;
+    font-family:LEMONMILK-Medium;
+    color: #434749;
+    margin-bottom:5px;
+}
+#tab .tab-contentt .tab-boxes .tab-box .tab-box-inner .inner-content p{
+    font-size: 15px;
+    font-family:Poppins-Regular;
+    color: #434749;
+}
+#tab .tab-change{
+    display: flex;
+    margin: 170px 0px;
+}
+#tab .tab-change .change-img{
+    width: 45%;
+    display: flex;
+    justify-content: center;
+    align-items: start;
+    margin: 15px 0px;
+}
+#tab .change-content{
+    width: 55%;
+}
+#tab .change-content .change-boxes{
+    display: flex;
+    justify-content: space-between;
+    margin: 15px 0px;
+}
+#tab .change-content .change-boxes .change-box-content{
+   display: flex;
+   align-items: end;
+   gap:5px;
+}
+#tab .change-content .change-boxes .change-box-content span{
+   font-size:60px;
+   font-family: LEMONMILK-Light;
+   color: #8c412b;
+   line-height:60px;
+}
+#tab .change-content .change-boxes .change-box-content .tab-pthree{
+   font-size:26px;
+   font-family: LEMONMILK-Regular;
+   color: #434749;
+   line-height: 26px;
+   margin: 0px;
+}
+#tab .change-content .tab-pone{
+    font-size: 16px;
+    font-family:Poppins-Regular;
+    margin: 30px 0px;
+}
+#tab .tab-btn{
+    border: solid 1px #8c412b;
+    display: inline-block;
+    height: 40px;
+    width: 125px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-decoration: none;
+}
+#tab .tab-btn:hover>span{
+    color:#fff;
+}
+#tab .tab-btn span{
+    color:#8c412b;
+    font-size: 15px;
+    font-family:LEMONMILK-Medium;
+    text-decoration: none;
+}
+#tab .nav-tabs {
+    border: none;
+    display: flex;
+    justify-content: space-between;
+}
+#tab .nav-tabs  .nav-link {
+    border: none;
+    padding: 0px;
+}
+#tab .nav-tabs  .nav-link:focus {
+    border: none;
+    padding: 0px;
+}
+/* #tab .nav-tabs  .nav-link:hover > .tab-box {
+    background-color: #8c412b;
+} */
+/* #tab .nav-tabs  .nav-link:hover > .tab-white{
+    display: block !important;
+} */
+#tab .nav-tabs  .active .tab-box {
+    background-color: #8c412b;
+}
+#tab .nav-tabs  .active .tab-box .tab-white{
+    display: block !important;
+}
+#tab .nav-tabs  .active .tab-box .tab-brown{
+    display: none !important;
+}
+#tab .nav-tabs  .active .tab-box .inner-content h2{
+    color:white !important;
+}
+#tab .nav-tabs  .active .tab-ptwo{
+    color:white !important;
+}
+/* #tab .nav-tabs  .nav-link:hover{
+    h2,.tab-ptwo{
+    color:white !important;
+    }
+} */
+#tab .nav-tabs  .nav-link:hover {
+    border: none;
+}
+#tab .solve {
+    width:31.3%;
+}
+#tab .inner-content{
+    text-align: start;
+}
+#tab .tab-change .change-img img{
+    width:260px;
+    height: 240px;
+}
+/* ========================================tab=end=============================================== */
+/* ========================================prof=================================================== */
+#prof{
+    background: url(../images/prof-back.png);
+    background-size: 100% 100%;
+    padding: 95px 0px;
+    background-color: #8c412b;
+}
+#prof .prof-content{
+    width: 88%;
+    margin: 0px auto;
+}
+#prof .prof-content .prof-right{
+    margin-left:50%;
+    padding-right:122px;
+}
+#prof h2{
+    color:white;
+    font-size: 35px;
+    font-family:LEMONMILK-Medium;
+    line-height:35px;
+}
+#prof h3{
+    color:white;
+    font-size: 16px;
+    font-family:Poppins-light;
+    padding: 22px 0px 28px 0px;
+    border-bottom: solid 1px rgba(255, 255, 255, 0.842);
+    line-height:23px;
+}
+#prof h4{
+    color:white;
+    font-size: 26px;
+    font-family:LEMONMILK-Regular;
+    line-height:26px;
+    margin: 28px 0px;
+}
+#prof h5{
+    color:white;
+    font-size: 16px;
+    font-family:Poppins-light;
+    line-height:23px;
+}
+#prof .prof-btn{
+    display: inline-block;
+    height: 40px;
+    width: 125px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-decoration: none;
+    margin-top: 22px;
+    background-color: #8c412b;
+    border: solid 2px #8c412b;
+}
+#prof .prof-btn:hover>span{
+    color: #8c412b !important;
+}
+#prof .prof-btn span{
+    color: white;
+    font-size: 15px;
+    font-family:LEMONMILK-Medium;
+    text-decoration: none;
+}
+/* ========================================prof=end=============================================== */
+/* ========================================services=================================================== */
+#service{
+    background-color: #8c412b;
+    background-image: url(../images/services-back.png);
+    padding: 95px 0px;
+}
+#service .service-content{
+    width: 88%;
+    margin:0px auto;
+}
+#service .service-content h2{
+    font-family:LEMONMILK-Medium;
+    font-size:20px;
+    color:white;
+}
+#service .service-content h3{
+    font-family:LEMONMILK-Medium;
+    font-size:35px;
+    color:white;
+    line-height:35px;
+    margin: 27px 0px;
+}
+#service .card{
+    border: none;
+    border-radius: 0px;
+}
+#service .card .card-title{
+    color: #8c412b;
+    font-size: 19px;
+    font-family:LEMONMILK-Medium;
+    margin-bottom: 20px;
+}
+#service .card .card-text{
+    color: #434749;
+    font-size: 15px;
+    font-family:Poppins-Regular;
+}
+#service .service-btn{
+    border: solid 1px #8c412b;
+    display: inline-block;
+    height: 40px;
+    width: 125px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-decoration: none;
+    margin: 33px 0px;
+}
+#service .service-btn:hover>span{
+    color:#fff;
+}
+#service .service-btn span{
+    color:#8c412b;
+    font-size: 15px;
+    font-family:LEMONMILK-Medium;
+    text-decoration: none;
+}
+#service .owl-services .item{
+    margin: 63px 0px;
+}
+#service .owl-nav{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: 0px;
+}
+#service .owl-prev{
+    background-color: white;
+    width:45px;
+    height:45px;
+    border-radius: 200px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+#service .fa-caret-left{
+    color: #8c412b;
+    font-size: 25px;
+    display: inline-block;
+}
+#service .owl-next{
+    background-color: white;
+    width:45px;
+    height:45px;
+    border-radius: 200px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+#service .fa-caret-right{
+    color: #8c412b;
+    font-size: 25px;
+    display: inline-block;
+}
+/* ========================================services=end=============================================== */
 @media (max-width: 5120px) {
     .container-new-big {
         max-width: 100%;
