--- a/css/hover.css
+++ b/css/hover.css
@@ -1255,6 +1255,7 @@
   transition-property: color;
   -webkit-transition-duration: 0.3s;
   transition-duration: 0.3s;
+  border-radius: 200px;
 }
 .hvr-sweep-to-right:before {
   content: "";
@@ -1264,7 +1265,7 @@
   left: 0;
   right: 0;
   bottom: 0;
-  background: #2098D1;
+  background: #8c412b;
   -webkit-transform: scaleX(0);
   transform: scaleX(0);
   -webkit-transform-origin: 0 50%;
@@ -1275,6 +1276,7 @@
   transition-duration: 0.3s;
   -webkit-transition-timing-function: ease-out;
   transition-timing-function: ease-out;
+  border-radius:200px;
 }
 .hvr-sweep-to-right:hover, .hvr-sweep-to-right:focus, .hvr-sweep-to-right:active {
   color: white;
@@ -2109,7 +2111,7 @@
   pointer-events: none;
   content: '';
   position: absolute;
-  border: #e1e1e1 solid 4px;
+  border: #8c412b solid 4px;
   top: -16px;
   right: -16px;
   bottom: -16px;
