--- a/css/hover.css
+++ b/css/hover.css
@@ -2129,6 +2129,39 @@
   left: -8px;
   opacity: 1;
 }
+/* Outline Inn*/
+.hvr-outline-inn {
+  display: inline-block;
+  vertical-align: middle;
+  -webkit-transform: perspective(1px) translateZ(0);
+  transform: perspective(1px) translateZ(0);
+  box-shadow: 0 0 1px rgba(0, 0, 0, 0);
+  position: relative;
+  border-radius: 200px;
+}
+.hvr-outline-inn:before {
+  pointer-events: none;
+  content: '';
+  position: absolute;
+  border: #8c412b solid 4px;
+  top: -16px;
+  right: -16px;
+  bottom: -16px;
+  left: -16px;
+  opacity: 0;
+  -webkit-transition-duration: 0.3s;
+  transition-duration: 0.3s;
+  -webkit-transition-property: top, right, bottom, left;
+  transition-property: top, right, bottom, left;
+  border-radius: 200px;
+}
+.hvr-outline-inn:hover:before, .hvr-outline-inn:focus:before, .hvr-outline-inn:active:before {
+  top: -8px;
+  right: -8px;
+  bottom: -8px;
+  left: -8px;
+  opacity: 1;
+}
 
 /* Round Corners */
 .hvr-round-corners {
